[project]
name = "hexgraphics"
version = "0.1.0"
authors = [
  { name="noobiezt0" },
]
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICENSE"]

[project.urls]
Source = "https://github.com/noobiezt0/0xg"
